<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_bar" />


    <ImageView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/icon"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/preg"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/preg"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/preg"
            android:textColor="@color/button_hover"
            android:text="@string/sign_in" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt3"
        android:fontFamily="@font/preg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="470dp"
        android:text="@string/dont_have"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/preg"
        android:layout_marginTop="470dp"
        android:layout_toEndOf="@+id/txt3"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="380dp"
        android:text="@string/keep_me_sign_in"
        android:textColor="@color/grey"
        android:fontFamily="@font/preg"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="380dp"
        android:layout_toEndOf="@+id/txt4"
        android:text="@string/forgot_password"
        android:fontFamily="@font/preg"
        android:textColor="@color/grey"
        android:textSize="12sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="630dp"
        android:fontFamily="@font/preg"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>