<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_app"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_corner"
        android:id="@+id/login"
        android:text="@string/login"
        />

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner"
        android:id="@+id/register"
        android:text="@string/register"
        />

</LinearLayout>